woops, wrong color fixed now! + minors css fix

--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -16,3 +16,10 @@ h3 {
 .bold {
     font-weight: 500;
 }
+
+.blankLink {
+    text-decoration: none;
+    &:visited {
+        color: initial;
+    }
+}
