--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -2,10 +2,10 @@
     margin-top: 15px;
     padding: 15px;
     border-radius: 20px;
-    background: rgb(164,91,220);
-    background: linear-gradient(350deg, $purpleBtn 44%, $pinkBtn 100%);
+    background: rgb(164, 91, 220);
+    background: linear-gradient(360deg, rgba(147, 86, 220, .92), rgba(255, 121, 218, .92));
     color: white;
     border: 0;
     font-size: $btn-size;
     font-weight: 500;
-}
+    }
