--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -15,7 +15,10 @@ footer {
         li {
             color: white;
             padding-bottom: 10px;
-
+            cursor: pointer;
+            &:hover {
+                text-decoration: underline;
+            }
             .fa-utensils, .fa-hands-helping {
                 margin-right: 10px;
                 font-size: $footerIconsSize;
