--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -64,6 +64,7 @@ main {
                 padding: 20px 0px 20px 0px;
                 border-radius: 15px;
                 box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+                cursor:default;
                 @media screen and (min-width:$startDesktop) {
                     width: 30%;
                     max-width: 475px;
